Add magento-coding-standard as dependency
Adding the magento coding standard repo as a dependency so we can use
phpcs to violations of the magento code standard. Because Magento check
this during review, it's important that we have a way of checking and
fixing this before uploading, so we don't have to wait for them to
reject the plugin first.

--- a/src/app/code/Komoju/Payments/composer.json
+++ b/src/app/code/Komoju/Payments/composer.json
@@ -1,10 +1,6 @@
-
 {
     "name": "komoju/payments",
     "description": "Integrates with Komoju to provide payment solutions for Magento",
-    "require": {
-        "magento/module-checkout": "*"
-    },
     "type": "magento2-module",
     "version": "0.0.1",
     "license": [],
@@ -13,5 +9,8 @@
         "psr-4": {
             "Komoju\\Payments\\": ""
         }
+    },
+    "require-dev": {
+        "magento/magento-coding-standard": "^5.0"
     }
 }
