--- a/src/app/code/Komoju/Payments/composer.json
+++ b/src/app/code/Komoju/Payments/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "komoju/payments",
-    "description": "Integrates with Komoju to provide payment solutions for Magento",
+    "description": "Integrates with KOMOJU to provide payment solutions for Magento",
     "type": "magento2-module",
     "version": "0.0.1",
     "license": [],
