--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,3 +18,11 @@ jobs:
           vendor/bin/phpcs --config-set installed_paths ../../magento/magento-coding-standard/
       - name: Run lint
         run: vendor/bin/phpcs --standard=magento2 src/app
+  lint-js:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install modules
+        run: yarn
+      - name: Run ESLint
+        run: yarn eslint src/app/code/Komoju/
