--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Ignore everything in the src directory
 src/**
+node_modules/
 
 # Re-include directories under src/app/code/Komoju/Payments and subdirectories
 !src/
