--- a/compose.yaml
+++ b/compose.yaml
@@ -140,6 +140,16 @@ services:
   #    - "5900:5900"
   #  extra_hosts: *appextrahosts
 
+  docs:
+    build:
+      context: .
+      dockerfile: docs/Dockerfile
+    volumes:
+      - ./:/docs
+    ports:
+      - "5555:5555"
+    command: serve --dev-addr=0.0.0.0:5555
+
 volumes:
   appdata:
   dbdata:
