--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: KOMOJU for Magento - Plugin Docs
+site_name: KOMOJU-Magento Plugin Docs
 site_url: "https://tech.degica.com/komoju-magento/"
 repo_url: https://github.com/degica/komoju-magento
 repo_name: "degica/komoju-magento"
@@ -38,16 +38,19 @@ extra:
 
 nav:
   - KOMOJU: 
-    - Overview: index.md
-    - Benefits: komoju/benefits.md
-    - Features: komoju/features.md
+      - Overview: index.md
+      - Benefits: komoju/benefits.md
+      - Features: komoju/features.md
   - User Guide: user_guide/getting_started.md
-  - Developer Guide: 
-    - Setup: developer_guide/dev_setup.md
-    - Events And Observers: developer_guide/events_and_observers.md
-    - Linting: developer_guide/linting.md
-    - Translations: developer_guide/translations.md
-    - Documenting: developer_guide/documenting.md
+  - Developer Guide:
+      - Setup & Environment:
+          - Dev Setup: developer_guide/setup/dev_setup.md
+      - Development Guidelines:
+          - Linting: developer_guide/development_guidelines/linting.md
+          - Translations: developer_guide/development_guidelines/translations.md
+          - Documentation Guide: developer_guide/development_guidelines/documenting.md
+      - Magento-Specific Development:
+          - Events & Observers: developer_guide/magento_core/events_and_observers.md
 
 markdown_extensions:
   - pymdownx.superfences
@@ -76,8 +79,14 @@ plugins:
             Overview: 概要
             Benefits: メリット
             Features: 機能
-            UserGuide: ユーザーマニュアル
-            DeveloperGuide: 開発者マニュアル
-            Setup: セットアップ
-            UploadPluginToMagento: Magento用プラグインのアップロード
+            User Guide: ユーザーガイド
+            Developer Guide: 開発者ガイド
+            Setup & Environment: セットアップと環境構築
+            Dev Setup: 開発環境セットアップ
+            Development Guidelines: 開発ガイドライン
+            Linting: リントについて
+            Translations: 翻訳について
+            Documentation Guide: ドキュメント作成ガイド
+            Magento-Specific Development: Magentoの開発関連
+            Events & Observers: イベントとオブザーバー
   - search
